_kube/central/backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: central
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: <your-account-id>.dkr.ecr.us-west-2.amazonaws.com/my-fastapi-app:latest
        ports:
        - containerPort: 8000
