_kube/central/backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: central
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
