_kube/central/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: central
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
